project: new report & 2a initial commit
report:
- 1a stability analysis + plots
- 2a initial commit

--- a/project/report.tex
+++ b/project/report.tex
@@ -400,7 +400,7 @@ e^{\top} \tilde{A} x = \text{tr}\{\tilde{A} x e^{\top}\} \quad\& \quad
 Τροποποιούμε τον αλγόριθμο που παρουσιάζει η \eqref{eq:theta_dot_proj}\textemdash και συγκεκριμένα τον δεύτερο κλάδο που κάνει την προβολή\textemdash ώστε να χρησιμοποιούμε άθροισμα επί των περιορισμών.
 Επομένως, στον τροποποιημένο αλγόριθμο, ο όρος προβολής ανανεώνεται ως:
 
-\begin{equation}
+\begin{equation}\label{t1:theta_update}
     \dot{\hat{\theta}} = 
     \Gamma \begin{bmatrix} e_1 x_1 \\ e_1 x_2 \\ e_2 x_1 \\ e_2 x_2 \\ e_1 u \\ e_2 u \end{bmatrix} - 
     \sum_{i \in \mathcal{A}} \Gamma \frac{\nabla g_i \nabla g_i^{\top}}{\nabla g_i^{\top} \Gamma \nabla g_i} \Gamma \begin{bmatrix} e_1 x_1 \\ e_1 x_2 \\ e_2 x_1 \\ e_2 x_2 \\ e_1 u \\ e_2 u \end{bmatrix},
@@ -509,16 +509,162 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 Στο αρχείο \textit{src/constrainedSystemDynamics.m} έχει εκφραστεί το παραπάνω σύστημα, 
 το οποίο λύνεται (με \textit{ode45}) στο εκτελέσιμο script: \underline{\textit{mainPart1a.m}} που αντιστοιχεί στο Ερώτημα α του Θέματος 1.
 
+
+\subsubsection{Μελέτη Ευστάθειας Συστήματος Εκτίμησης \& Επιλογή Εισόδου $u(t)$}
+
+Στην μαθηματική ανάλυση της μεθόδου Lyapunov για μεικτή δομή συστήματος αναγνώρισης δείξαμε ότι το σύστημα εκτίμησης είναι ευσταθές αν ο πίνακας $C$
+της \eqref{eq:vdot_intermediate_b} είναι θετικά ημιορισμένος. 
+Παρόλα αυτά η παραπάνω ανάλυση αφορούσε την περίπτωση που έχουμε ενημέρωση των παραμέτρων $\theta$, χωρίς περιορισμούς, μέσω της \eqref{eq:theta_dot}.
+Για την περίπτωση που η δυναμική του $\theta$ δίνεται από την \eqref{eq:update_theta}, γεννιέται το ερώτημα αν αυτό θα επηρεάσει την ευστάθεια του συστήματος εκτίμησης. 
+Παρόλα αυτά, με την προβολή του $\theta$ σύνορο\textemdash 
+φράσσοντας δηλαδή το επιτρεπτό πεδίο στο οποίο μπορούν να κινηθούν τα $\hat\theta$\textemdash 
+όχι απλώς δεν "χαλάει" η συνθήκη ευστάθειας της \eqref{eq:vdot_intermediate_b}, αλλά στην πράξη γίνεται ακόμα πιο αρνητική.
+
+Πράγματι, αντικαθιστώντας την \eqref{t1:theta_update} στην \eqref{eq:vdot_intermediate_b}, παρατηρούμε ότι μέσα στο trace θα μείνουν μόνο τα στοιχειά που αναφέρονται στην προβολή. 
+Με αυτά το αποτέλεσμα του trace δίνει μία ακόμη αρνητική ποσότητα η οποία δεν επηρεάζει την συνθήκη $\dot{V} < 0$.
+Προφανώς η επιλογή κατάλληλου πίνακα $C$ είναι σε κάθε περίπτωση σημαντική για την ευστάθεια.
+
+Ένας τρόπος που μπορούμε να επαληθεύσουμε και στην πράξη την ευστάθεια του συστήματος εκτίμησης 
+είναι να δοκιμάσουμε να τρέξουμε την προσομοίωση με διάφορες εισόδους $u(t)$ και να δούμε ότι όντως στο σύστημά μας υπάρχει ευστάθεια.
+Η επιλογή κατάλληλης εισόδου είναι επίσης σημαντική μιας και από αυτήν (όπως αναφέραμε και στο τέλος της μαθηματική ανάλυση της μεθόδου Lyapunov)
+θα εξαρτηθεί αν τα παραμετρικά σφάλματα θα συγκλίνουν στο μηδέν με την πάροδο του χρόνου.  
+
+Ικανή και αναγκαία συνθήκη για να συγκλίνει η εκτίμηση των παραμέτρων $\hat\theta$ στην πραγματική τους τιμή $\theta$ είναι η ικανοποίηση μιας ΣΕΔ.
+Εφόσον μας δίνεται η δυνατότητα η $u(t)$ να είναι δικής μας επιλογής, επιλέγουμε την:
+\begin{equation}\label{t1:u}
+    u(t) = 2.5  \sin(t) + 1.5  \cos(1.5 t) + 0.8  \sin(3 t).
+\end{equation}
+Αν και στην πράξη, για το ΓΧΑ σύστημα 2ης τάξης που μελετάμε, αρκεί διέγερσή του με μία μόνο συχνότητα προκειμένου να εκτιμηθούν οι άγνωστες παράμετροί του, επιλέγουμε να χρησιμοποιήσουμε περισσότερες συχνότητες. 
+Με τον τρόπο αυτό, αξιολογούμε πληρέστερα τόσο τη διαδικασία αναγνώρισης των παραμέτρων όσο και την ικανότητά του να ανταποκρίνεται σε διαφορετικές εισόδους περισσότερων συχνοτήτων. 
+
 \begin{center}
     \textit{Στην συνέχεια παραθέτουμε τις ζητούμενες γραφικές παραστάσεις και εξάγουμε σχετικά συμπεράσματα.}
 \end{center}
 
+
+
 \subsubsection{Αποτελέσματα MATLAB και Συμπεράσματα}
-TODO:\\
- - έλεγχος ευστάθειας \\
- - επιλογη εισόδου \\
- - Βάλε τα πλοτ που έβγαλες \\
- - πες συμπεράσματα \\
+
+Στο Σχήμα~\ref{fig:x_est} παρουσιάζονται οι γραφικές παραστάσεις των δύο καταστάσεων $x(t) = [x_1(t) \ \ x_2(t)]^{\top}$.
+Όπως είναι φανερό και οπτικά, αλλά και όπως δείχνουν οι αντίστοιχες γραφικές παραστάσεις των σφαλμάτων στο Σχήμα~\ref{fig:err}, 
+το σφάλμα της μοντελοποίησης τείνει στο μηδέν με την πάροδο του χρόνου, όπως ακριβώς περιμέναμε να συμβαίνει και σύμφωνα με την θεωρητική ανάλυση. 
+
+Στο αρχείο \textit{mainTopic1a.m} μπορούμε να αλλάξουμε τον συνολικό χρόνο προσομοίωσης μέσω της μεταβλητής {\small \texttt{T\_final}},
+όπως επίσης και τις τιμές των $\theta_m$ και $\Gamma$ μέσω των {\small\texttt{c\_coeff}} και {\small \texttt{gamma}} αντίστοιχα. 
+Μπορούμε επίσης να αλλάξουμε τις αρχικές τιμές/σημείο εκκίνησης, προσέχοντας όμως η αρχική τιμή $\theta_0$ να ανήκει στο $\Theta$.
+
+Στο Σχήμα~\ref{fig:A_est} βλέπουμε τις γραφικές παραστάσεις των $[A]_{ij}$ ως προς τον χρόνο. 
+Όπως είναι φανερό, με το πέρας του χρόνου, καθεμία από αυτές φαίνεται να συγκλίνει προς την πραγματική της τιμή.
+Αξίζει να επισημαίνουμε ότι στην περίπτωση της γραφικής παράστασης του $a_{11}$, φαίνεται ότι αρχικά η λύση πάει να βγει εκτός επιτρεπτών τιμών 
+αλλά παρόλα αυτά προβάλλεται στο σύνορο $\Theta_b$, όπως ακριβώς αναλύσαμε στην θεωρία ότι θα συνέβαινε. 
+
+Τέλος το Σχήμα~\ref{fig:B_est} περιέχει τις προβλέψεις που αφορούν τις παραμέτρους $[B]_{i}$ με τον χρόνο. 
+Και σε αυτήν την περίπτωση, όπως και με τις προηγούμενες, βλέπουμε ότι όσο περνάει ο χρόνος οι τιμές των παραμέτρων προσαρμόζονται κατάλληλα και τείνουν σε αυτές του πραγματικού συστήματος. 
+Αυτό άλλωστε θα θέλαμε να δούμε μιας και η μέθοδος που έχουμε εφαρμόσει είναι πραγματικού χρόνου.
+
+Τέλος παραθέτουμε τα logs που τυπώνουμε, τα οποία αναφέρονται στο σχετικό σφάλμα της τελικής εκτίμησης σε σχέση με την πραγματική τιμή για την κάθε παράμετρο. 
+Με χρήση διαφορετικής εισόδου ή με την αλλαγή των $\Gamma$ και $\theta_m$, μπορούμε να πετύχουμε διαφορετικά tradeoff μεταξύ των προβλέψεων των παραμέτρων.
+\begin{figure}[ht!]
+    \centering
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot1_a_x1.png}
+        % \caption{Image 1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot1_b_x2.png}
+        % \caption{Image 2}
+    \end{minipage}
+    
+    \caption{}
+    \label{fig:x_est}
+\end{figure}
+
+\begin{figure}[ht!]
+    \centering
+    \begin{minipage}{0.32\textwidth}
+        \centering
+        \includegraphics[width=0.99\linewidth]{plots/plot2_a_e1.png}
+        % \caption{Image 1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.32\textwidth}
+        \centering
+        \includegraphics[width=0.99\linewidth]{plots/plot2_b_e2.png}
+        % \caption{Image 2}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.32\textwidth}
+        \centering
+        \includegraphics[width=0.99\linewidth]{plots/plot2_c_eNorm.png}
+        % \caption{Image 2}
+    \end{minipage}
+    
+    \caption{}
+    \label{fig:err}
+\end{figure}
+
+\begin{figure}[ht!]
+    \centering
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot3_a_a11.png}
+        % \caption{Image 1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot3_b_a12.png}
+        % \caption{Image 2}
+    \end{minipage}
+    
+    \vspace{1em} % Space between rows
+    
+    \centering
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot3_c_a21.png}
+        % \caption{Image 1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot3_d_a22.png}
+        % \caption{Image 1}
+    \end{minipage}
+    
+    \caption{}
+    \label{fig:A_est}
+\end{figure}
+
+\begin{figure}[ht!]
+    \centering
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.7\linewidth]{plots/plot4_a_b1.png}
+        % \caption{Image 1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.7\linewidth]{plots/plot4_b_b2.png}
+        % \caption{Image 2}
+    \end{minipage}
+    
+    \vspace{1em} % Space between rows
+    
+    \centering
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{plots/plot5_logs.png}
+        % \caption{Image 1}
+    \end{minipage}
+    
+    \caption{}
+    \label{fig:B_est}
+\end{figure}
 
 
 
@@ -768,10 +914,107 @@ $\theta = [\theta_1, \theta_2]^{\top} \in \mathbb{R}^2$ είναι ένα στα
 \end{equation}
 όπου $\theta_1, \theta_2 \in [0.5, 2]$ και $u(t)$ είναι δικής μας επιλογής. 
 
+Σε αυτό το θέμα το δοθέν σύστημα αποτελεί ένα "Μαύρο Κουτί", μιας και στην πράξη δεν έχουμε καμία πληροφορία για την δομή του. 
+Αν $S$ είναι το πραγματικό σύστημα, τότε αυτό παίρνει ως είσοδο μια οποιαδήποτε συνάρτηση της επιλογής μας, $u(t)$, 
+και δίνει στην έξοδό του την (επίσης μετρήσιμη) συνάρτηση $x(t) = S[u(t)]$.
+
+
+\subsection{Ερώτημα Α}
+Ένα πρώτο βήμα για την κατανόηση του συστήματός μας είναι να ελέγξουμε αν αυτό είναι γραμμικό και χρονοαμετάβλητο.
+Για να το κάνουμε αυτό μπορούμε να δοκιμάσουμε να δώσουμε στο σύστημα διάφορα ζεύγη εισόδων $\{u_1(t), u_2(t)\}$
+και να ελέγχουμε αν για αυτά ισχύει η σχέση $S[au_1(t) + bu_2(t)] = aS[u_1(t)] + bS[u_2(t)],\ a,b \in \mathbb{R}$.
+Αντίστοιχα για τον έλεγχο του αμετάβλητου ως προς το χρόνο μπορούμε να κάνουμε τον έλεγχο για το αν ισχύει η συνεπαγωγή: 
+$S[u(t)] = x(t) \Rightarrow S[u(t - t_0)v(t-t_0)] = x(t-t_0)v(t-t_0)$, όπου με $v(t)$ ορίζουμε την βηματική συνάρτηση. 
+
+Τα παραπάνω βέβαια αποτελούν απλώς μία πρώτη επαφή με το σύστημά μας, και μπορούν μόνο να χρησιμοποιηθούν, όχι για να αποδείξουν, αλλά για να 
+καταρρίψουν την υπόθεση για γραμμικό ή χρονοαμετάβλητο σύστημα. 
+
+Στην συνέχεια της ανάλυσης θα παρουσιάσουμε την διαδικασία επιλογής δομής που ακολουθήσαμε για την προσέγγιση του αγνώστου συστήματος της \eqref{t2:sys_form}.
+
+
+\subsubsection{Διαδικασία Επιλογής Δομής}
+
+Ο στόχος εδώ είναι να προσεγγίσουμε την άγνωστη συνάρτηση \(f(x, u, \theta)\) χρησιμοποιώντας μια δομή μοντέλου που συντίθεται από \textit{βασικές συναρτήσεις}. 
+Για την διαδικασία επιλογής δομής μοντέλου\textemdash δηλαδή την επιλογή ενός συνόλου βασικών συναρτήσεων \textbf{και} τον προσδιορισμό της πολυπλοκότητάς τους, όπως για παράδειγμα το πλήθος των όρων του\textemdash ακολουθούμε τα παρακάτω βήματα:
+
+1. \textit{Επιλογή Βασικών Συναρτήσεων}: \\
+Επιλέγουμε μια "οικογένεια" βασικών συναρτήσεων για να αναπαραστήσουμε τη \(f(x, u, \theta)\). 
+Συνήθεις επιλογές περιλαμβάνουν 
+πολυώνυμα \( \{1, x, x^2, x^3, \dots, u, u^2, \dots\} \), 
+γκαουσιανές βασικές συναρτήσεις (RBFs) \(\phi_i(x) = \exp\left(-\frac{(x - c_i)^2}{2\sigma_i^2}\right)\),
+ρητές συναρτήσεις όπως η ίδια η \(\frac{1}{1 + x^2}\), κ.α.
+
+
+2. \textit{Επιλογή Υποψήφιων Μοντέλων}: \\
+Ορίζουμε πολλαπλές δομές μοντέλων με αυξανόμενη πολυπλοκότητα. Οι επιλογές που κάνουμε παρατίθενται παρακάτω:
+\begin{itemize}[noitemsep, nolistsep]
+    \item Μοντέλο 1 (Απλό Πολυώνυμο): 
+    $$\hat{f} = \hat{\theta}_0 + \hat{\theta}_1 x + \hat{\theta}_2 x^2 + \hat{\theta}_3 x^3 + \hat{\theta}_4 u + \hat{\theta}_5 u^2.$$
+    
+    \item Μοντέλο 2 (Πολυώνυμο + Tanh): 
+    $$\hat{f} = \hat{\theta}_0 + \hat{\theta}_1 x + \hat{\theta}_2 x^3 + \hat{\theta}_3 \tanh(x) + \hat{\theta}_4 u.$$
+    
+    \item Μοντέλο 3 (Γκαουσιανές RBFs): 
+    $$\hat{f} = \sum_{i=0}^k \hat{\theta}_i \exp\left(-\frac{(x - c_i)^2}{2\sigma^2}\right) + \hat{\theta}_{k+1} u,\ \text{ με κέντρα \(c_i\) και πλάτος \(\sigma\)}.$$
+
+    \item Μοντέλο 4 (Γκαουσιανές RBFs + Πολυωνυμικός όρος): 
+    $$\hat{f} = \hat{\theta}_0 x^3 + \sum_{i=1}^k \hat{\theta}_i \exp\left(-\frac{(x - c_i)^2}{2\sigma^2}\right) + \hat{\theta}_{k+1} u.$$
+\end{itemize}
+
+4. \textit{Επιλογές Εισόδου \(u(t)\)}: \\ 
+Η είσοδος \(u(t)\) θα πρέπει να επιλεγεί κατάλληλα ώστε να διεγείρει το σύστημα έτσι, ώστε να σκιαγραφείται η δυναμική του. 
+Καλές επιλογές που θα χρησιμοποιηθούν στην προσομοίωση είναι αθροίσματα ημιτονοειδών, μιας και με αυτά καλύπτεται ένα εύρος συχνοτήτων. 
+
+5. \textit{Προσομοίωση του Συστήματος}: \\
+Τέλος, χρησιμοποιούμε το αληθινό σύστημα \(\dot{x} = -x^3 + \theta_1 \tanh(x) + \theta_2 \frac{1}{1+x^2} + u\) με επιλεγμένα \(\theta_1, \theta_2 \in [0.5, 2]\) (επιλέγουμε για την συνέχεια της ανάλυσής μας \(\theta_1 = 1.5\), \(\theta_2 = 2.0\)) 
+για να παράγουμε δεδομένα εξόδου για την προσαρμογή του μοντέλου. 
+
+
+\subsubsection{Εκτίμηση Παραμέτρων σε Πραγματικό Χρόνο}
+
+Για την εκτίμηση παραμέτρων σε πραγματικό χρόνο, το μοντέλο πρέπει να προσαρμόζει τις παραμέτρους του \(\hat{\theta}\) καθώς νέα δεδομένα \((x(t), u(t))\) γίνονται διαθέσιμα. 
+Δεδομένου ότι το σύστημα είναι μη γραμμικό, μπορούμε να χρησιμοποιήσουμε μεθόδους βασισμένες σε κλίση όπως την αναδρομική μορφή της μεθόδου ελαχίστων τετραγώνων (RLS) ή την μέθοδο κλίσης, όπως την παραθέσαμε και στην ανάλυση του προηγούμενου θέματος.
+
+Από την θεωρία έχουμε τα RLS και η μέθοδος κλήσης μπορούν να εφαρμοστούν σε ένα μοντέλο γραμμικό ως προς τις παραμέτρους:
+\[
+\dot{x}(t) \approx \hat{f}(x, u, \hat{\theta}) = \phi(x, u)^{\top} \hat{\theta} = \hat{\theta}^{\top} \phi(x, u),
+\]
+όπου \(\phi(x, u) = [\phi_0(x), \dots, \phi_n(x), u]^{\top}\) είναι το διάνυσμα των οπισθοδρομητών και \(\hat{\theta} = [\hat{\theta}_0, \dots, \hat{\theta}_{n+1}]^{\top}\). 
+
+Προφανώς, ακολουθώντας την διαδικασία που αναλύσαμε στο Ερώτημα Β του θέματος 1, μπορούμε μα χρήση κατάλληλου φίλτρου πρώτης τάξης να διώξουμε την παράγωγο $\dot{x}(t)$ και να φέρουμε το σύστημα σε μορφή $y = \theta^{\top} \phi$.
+
+H μέθοδος κλίσης για το πρόβλημά μας δίνει την ανανέωση του $\theta$ σύμφωνα με την:
+\[
+\dot{\hat{\theta}} = \gamma (y - \hat\theta \phi) \phi = \gamma e \phi,
+\]
+όπου \(e =  y - \hat\theta \phi\).
+
+Λύνοντας το σύστημα των διαφορικών που προκύπτουν (όπως έχουμε αναφέρει ήδη στο Θέμα 1) θα είμαστε σε θέση να εκτιμήσουμε το διάνυσμα των $\theta$.
+
+\subsubsection{Αξιολόγηση και Σύγκριση Μοντέλων}
+Για να συγκρίνουμε τις υποψήφιες δομές μοντέλων, χρειάζεται να αξιολογήσουμε την απόδοσή τους χρησιμοποιώντας ποσοτικές μετρικές και ποιοτική ανάλυση (οπτικοποίηση προβλέψεων).
+
+Μερικές μετρικές αξιολόγησης που μπορούμε να λάβουμε υπόψιν είναι:
+\begin{enumerate}[nolistsep, noitemsep]
+    \item Μέσο Τετραγωνικό Σφάλμα (MSE) \\
+        \[
+        \text{MSE} = \frac{1}{T} \int_0^T (\dot{x}(t) - \hat{f}(x(t), u(t), \hat{\theta}(t)))^2 \, dt,
+        \]
+        προσεγγιζόμενο διακριτά σε χρονικά βήματα. Χαμηλότερο MSE δείχνει καλύτερη προσαρμογή.
+    
+    \item Κριτήριο Πληροφορίας Akaike (AIC) \\
+        \[
+        \text{AIC} = 2k + N \ln(\text{MSE}),
+        \]
+        όπου \(k\) είναι ο αριθμός των παραμέτρων, και \(N\) είναι ο αριθμός των σημείων δεδομένων. Το AIC εξισορροπεί την προσαρμογή του μοντέλου (MSE) και την πολυπλοκότητα (αριθμός παραμέτρων).
+        
+    \item Εγκάρσια Αξιολόγηση (Cross Validation - CV) \\
+       - Χωρίστε τα δεδομένα σε σύνολα εκπαίδευσης και επικύρωσης (π.χ., 70% εκπαίδευση, 30% επικύρωση).
+   - Προσαρμόστε το μοντέλο στο σύνολο εκπαίδευσης και υπολογίστε MSE στο σύνολο επικύρωσης για να αξιολογήσετε τη γενίκευση.
+\end{enumerate}
+
+
 
 \newpage
-
-
-
 
 \end{document}
