project: docs - updates in 1a + 1b

--- a/project/report.tex
+++ b/project/report.tex
@@ -520,8 +520,8 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 φράσσοντας δηλαδή το επιτρεπτό πεδίο στο οποίο μπορούν να κινηθούν τα $\hat\theta$\textemdash 
 όχι απλώς δεν "χαλάει" η συνθήκη ευστάθειας της \eqref{eq:vdot_intermediate_b}, αλλά στην πράξη γίνεται ακόμα πιο αρνητική.
 
-Πράγματι, αντικαθιστώντας την \eqref{t1:theta_update} στην \eqref{eq:vdot_intermediate_b}, παρατηρούμε ότι μέσα στο trace θα μείνουν μόνο τα στοιχειά που αναφέρονται στην προβολή. 
-Με αυτά το αποτέλεσμα του trace δίνει μία ακόμη αρνητική ποσότητα η οποία δεν επηρεάζει την συνθήκη $\dot{V} < 0$.
+Πράγματι, αντικαθιστώντας την \eqref{t1:theta_update} στην \eqref{eq:vdot_intermediate_b}, παρατηρούμε ότι μέσα στο trace θα μείνουν μόνο τα στοιχειά, που αναφέρονται στην προβολή. 
+Με αυτά, το αποτέλεσμα του trace δίνει μία αρνητική ποσότητα η οποία δεν επηρεάζει την συνθήκη $\dot{V} < 0$.
 Προφανώς η επιλογή κατάλληλου πίνακα $C$ είναι σε κάθε περίπτωση σημαντική για την ευστάθεια.
 
 Ένας τρόπος που μπορούμε να επαληθεύσουμε και στην πράξη την ευστάθεια του συστήματος εκτίμησης 
@@ -534,8 +534,10 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 \begin{equation}\label{t1:u}
     u(t) = 2.5  \sin(t) + 1.5  \cos(1.5 t) + 0.8  \sin(3 t).
 \end{equation}
-Αν και στην πράξη, για το ΓΧΑ σύστημα 2ης τάξης που μελετάμε, αρκεί διέγερσή του με μία μόνο συχνότητα προκειμένου να εκτιμηθούν οι άγνωστες παράμετροί του, επιλέγουμε να χρησιμοποιήσουμε περισσότερες συχνότητες. 
-Με τον τρόπο αυτό, αξιολογούμε πληρέστερα τόσο τη διαδικασία αναγνώρισης των παραμέτρων όσο και την ικανότητά του να ανταποκρίνεται σε διαφορετικές εισόδους περισσότερων συχνοτήτων. 
+Στην πράξη, για το ΓΧΑ σύστημα 2ης τάξης που μελετάμε, μας ενδιαφέρει να εκτιμήσουμε και τις $6$ \textit{ανεξάρτητες} παραμέτρους του.
+Γι' αυτόν τον λόγο, επιλέγουμε να χρησιμοποιήσουμε συνολικά τρεις συχνότητες.
+Με αυτόν τον τρόπο εξασφαλίζουμε ότι το σήμα εισόδου έχει αρκετές συχνότητες ώστε να έχουμε την δυνατότητα να εκτιμήσουμε με αρκετή ακρίβεια καθεμία από τις $6$ παραμέτρους του (με σφάλμα εκτίμηση κάθε παραμέτρου να μπορεί ιδανικά να τείνει στο μηδέν). 
+
 
 \begin{center}
     \textit{Στην συνέχεια παραθέτουμε τις ζητούμενες γραφικές παραστάσεις και εξάγουμε σχετικά συμπεράσματα.}
@@ -547,20 +549,21 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 
 Στο Σχήμα~\ref{fig:x_est} παρουσιάζονται οι γραφικές παραστάσεις των δύο καταστάσεων $x(t) = [x_1(t) \ \ x_2(t)]^{\top}$.
 Όπως είναι φανερό και οπτικά, αλλά και όπως δείχνουν οι αντίστοιχες γραφικές παραστάσεις των σφαλμάτων στο Σχήμα~\ref{fig:err}, 
-το σφάλμα της μοντελοποίησης τείνει στο μηδέν με την πάροδο του χρόνου, όπως ακριβώς περιμέναμε να συμβαίνει και σύμφωνα με την θεωρητική ανάλυση. 
+το σφάλμα της μοντελοποίησης τείνει στο μηδέν με την πάροδο του χρόνου\textemdash 
+όπως ακριβώς περιμέναμε να συμβαίνει και σύμφωνα με την θεωρητική ανάλυση. 
 
 Στο αρχείο \textit{mainTopic1a.m} μπορούμε να αλλάξουμε τον συνολικό χρόνο προσομοίωσης μέσω της μεταβλητής {\small \texttt{T\_final}},
 όπως επίσης και τις τιμές των $\theta_m$ και $\Gamma$ μέσω των {\small\texttt{c\_coeff}} και {\small \texttt{gamma}} αντίστοιχα. 
 Μπορούμε επίσης να αλλάξουμε τις αρχικές τιμές/σημείο εκκίνησης, προσέχοντας όμως η αρχική τιμή $\theta_0$ να ανήκει στο $\Theta$.
 
 Στο Σχήμα~\ref{fig:A_est} βλέπουμε τις γραφικές παραστάσεις των $[A]_{ij}$ ως προς τον χρόνο. 
-Όπως είναι φανερό, με το πέρας του χρόνου, καθεμία από αυτές φαίνεται να συγκλίνει προς την πραγματική της τιμή.
-Αξίζει να επισημαίνουμε ότι στην περίπτωση της γραφικής παράστασης του $a_{11}$, φαίνεται ότι αρχικά η λύση πάει να βγει εκτός επιτρεπτών τιμών 
+Όπως είναι φανερό, με το πέρας του χρόνου, καθεμία από αυτές τείνει να συγκλίνει προς την πραγματική της τιμή.
+Αξίζει να επισημάνουμε ότι στην περίπτωση της γραφικής παράστασης του $a_{11}$, αρχικά η λύση πάει να βγει εκτός επιτρεπτών τιμών 
 αλλά παρόλα αυτά προβάλλεται στο σύνορο $\Theta_b$, όπως ακριβώς αναλύσαμε στην θεωρία ότι θα συνέβαινε. 
 
 Τέλος το Σχήμα~\ref{fig:B_est} περιέχει τις προβλέψεις που αφορούν τις παραμέτρους $[B]_{i}$ με τον χρόνο. 
 Και σε αυτήν την περίπτωση, όπως και με τις προηγούμενες, βλέπουμε ότι όσο περνάει ο χρόνος οι τιμές των παραμέτρων προσαρμόζονται κατάλληλα και τείνουν σε αυτές του πραγματικού συστήματος. 
-Αυτό άλλωστε θα θέλαμε να δούμε μιας και η μέθοδος που έχουμε εφαρμόσει είναι πραγματικού χρόνου.
+Αυτό περιμέναμε να το δούμε, μιας και η μέθοδος που έχουμε εφαρμόσει είναι πραγματικού χρόνου.
 
 Τέλος παραθέτουμε τα logs που τυπώνουμε, τα οποία αναφέρονται στο σχετικό σφάλμα της τελικής εκτίμησης σε σχέση με την πραγματική τιμή για την κάθε παράμετρο. 
 Με χρήση διαφορετικής εισόδου ή με την αλλαγή των $\Gamma$ και $\theta_m$, μπορούμε να πετύχουμε διαφορετικά tradeoff μεταξύ των προβλέψεων των παραμέτρων.
@@ -841,9 +844,9 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 
 Για να λύσουμε το πρόβλημα μπορούμε να χρησιμοποιήσουμε την διακοπτική $\sigma$-τροποποίηση η οποία, σύμφωνα με την θεωρία, 
 εξασφαλίζει τόσο ότι δεν θα έχουμε παραμετρική ολίσθηση όσο και σύγκλιση του σφάλματος εξόδου στο $0$ (θεωρητικά).
-Εφόσον έχουμε ήδη φέρει το σύστημα στην μορφή \eqref{eq:sys_param_filter_2}, στην συνέχεια θα σχεδιάσουμε/εφαρμόσουμε την μέθοδο κλίση με συνεχή διακοπτική $\sigma$-τροποποίηση για την εύρεση των παραμέτρων $\theta_{\lambda}^{*}$.
+Εφόσον έχουμε ήδη φέρει το σύστημα στην μορφή \eqref{eq:sys_param_filter_2}, στην συνέχεια θα σχεδιάσουμε/εφαρμόσουμε την μέθοδο κλίσης με συνεχή διακοπτική $\sigma$-τροποποίηση για την εύρεση των παραμέτρων $\theta_{\lambda}^{*}$.
 
-Το σύστημα που χρειάζεται να λύσουμε για την εύρεση των παραμέτρων $\hat\theta_{\lambda}^{*}$, αν δεν είχαμε περιορισμούς για τις επιτρεπτές τιμές αυτών, είναι το εξής:
+Άρα, σύμφωνα με την θεωρία, το σύστημα που χρειάζεται να λύσουμε για την εύρεση των παραμέτρων $\hat\theta_{\lambda}^{*}$, αν δεν είχαμε περιορισμούς για τις επιτρεπτές τιμές αυτών, είναι το εξής:
 \begin{align}\label{eq:system_biased_omega}
     y &= \Phi \theta_{\lambda}^{*} + \omega, \quad |\theta_{\lambda}^{*}| \leq M \notag \\
     \hat{y} &= \Phi\hat{\theta}_{\lambda}^{*}  \notag\\
@@ -859,14 +862,17 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
 \begin{itemize}[noitemsep, nolistsep]
     \item Το $K(\hat{\theta}_{\lambda}^{*})$ είναι η συνάρτηση κόστους που θέλουμε να ελαχιστοποιήσουμε για $\hat{\theta}_{\lambda}^{*} \in \Theta$. Ως συνάρτηση κόστους επιλέγουμε την $K(\hat{\theta}_{\lambda}^{*}) = \frac{||e||^2}{2} = \frac{||y - \Phi\hat{\theta}_{\lambda}^{*}||^2}{2}$.
     Παραγωγίζοντάς την παίρνουμε $\nabla K(\hat{\theta}_{\lambda}^{*}) = -\Phi^{\top} e$.
-    \item Το $M >0$ είναι γνωστή σταθερά την οποία πρέπει να θέσουμε σε κατάλληλη τιμή μέσω trial and error για να ικανοποιεί την: $|\theta_{\lambda}^{*}| \leq M$ (άρα πρέπει να οριστεί ίση με έναν αρκούντως μεγάλο θετικό αριθμό). 
+    \item Το $M >0$ είναι σταθερά την οποία πρέπει να θέσουμε σε κατάλληλη τιμή\textemdash μέσω trial and error\textemdash για να ικανοποιεί την: $|\theta_{\lambda}^{*}| \leq M$ (άρα πρέπει να οριστεί ίση με έναν αρκούντως μεγάλο θετικό αριθμό). 
     \item Το $\sigma >0$ είναι ο συντελεστής της $\sigma$-τροποποίησης. Θα μπορούσαμε να ορίζουμε διαφορετικό $\sigma$ για κάθε μία εκ των παραμέτρων προς εκτίμηση, $\hat{\theta}_i$, όμως για απλότητα διατηρούμε ίδια τιμή σε όλους. 
 \end{itemize}
 
-Για να αξιοποιεί ο αλγόριθμος πραγματικού χρόνου που σχεδιάζουμε την πληροφορία ότι $\hat{\theta}_{\lambda}^{*} \in \Theta$, 
+Για να αξιοποιεί ο αλγόριθμος πραγματικού χρόνου που σχεδιάζουμε την πληροφορία ότι $\hat{\theta}_{\lambda}^{*} \in \,^\lambda\Theta$, 
 στην ενημέρωση του $\dot{\hat{\theta}}_{\lambda}^{*}$ που παραθέσαμε στο παραπάνω σύστημα της \eqref{eq:system_biased_omega} 
-θα εφαρμόζουμε προβολή στο σύνορο $\Theta_b$ μέσω της σχέσης \eqref{eq:update_theta} που αναπτύξαμε για τις συνθήκες περιορισμού του προβλήματος. 
-Έτσι, μπορούμε να εγγυηθούμε ότι το $\hat{\theta}_{\lambda}^{*}$ δεν θα βγει ποτέ εκτός του συνόλου $\Theta$.
+θα εφαρμόζουμε προβολή στο σύνορο $\,^\lambda\Theta_{b}$ μέσω της σχέσης \eqref{eq:update_theta} (που αναπτύξαμε για τις συνθήκες περιορισμού του προβλήματος). 
+Έτσι, μπορούμε να εγγυηθούμε ότι το $\hat{\theta}_{\lambda}^{*}$ δεν θα βγει ποτέ εκτός του συνόλου $\,^\lambda\Theta$.
+
+\noindent\textit{Συμβολισμός}: Το σύνολο $\,^\lambda\Theta$ αποτελεί το σύνολο όλων $\hat{\theta}_{\lambda}^{*}$ που ικανοποιούν τους περιορισμούς για τα $a_{11}$ και $b_2$. Υπάρχει ένα προς ένα αντιστοιχία των στοιχείων του με αυτών του συνόλου $\Theta$.
+    
 
 \begin{examplebox}{Παρατήρηση}
     Ο αλγόριθμος που θέλουμε να σχεδιάσουμε είναι πραγματικού χρόνου. 
@@ -883,12 +889,48 @@ A_{\text{hat}} x(t) + B_{\text{hat}} u(t) + C (x(t) - \hat{x}(t)) \\
     συμπεριλαμβάνουμε και τις παραπάνω τρεις. 
 \end{examplebox}
 
+
+\subsubsection{Μοντελοποίηση $\omega$ στο MATLAB}
+Στην προηγούμενη ενότητα αναφέραμε τον τρόπο με τον οποίο θα εφαρμόσουμε την διακοπτική $\sigma$-τροποποίηση (συνεχής εκδοχή) για την εύρεση των παραμέτρων $\hat\theta^*_\lambda$.
+Με αυτήν εξασφαλίζουμε πως δεν θα έχουμε παραμετρική ολίσθηση και ότι το σφάλμα εξόδου, $e = x - \hat x$, θα μπορεί να τείνει στο μηδέν. 
+Το μόνο που μένει να μοντελοποιήσουμε ώστε να μπορούμε να περάσουμε το σύστημα της \eqref{eq:system_biased_omega}\footnote{
+Όπως το αναλύσαμε στην προηγούμενη ενότητα\textemdash μαζί με τα σχόλια και τις παρατηρήσεις που το συνοδεύουν.
+} στο MATLAB είναι το $\omega$.
+
+Το $\omega(t) \in \mathbb{R}^2$ πολώνει την \eqref{eq:sys_param_filter_2} και έτσι μας οδηγήσει στην \eqref{eq:system_polosi}.
+Γενικά, το $\omega(t)$ μπορεί να μοντελοποιηθεί ως μικρή διαταραχή χαμηλής συχνότητας. 
+Ένας απλός τρόπος μοντελοποίησης θα ήταν να ορίσουμε και τις δύο συνιστώσες ίσες με κάποιο ημίτονο συχνότητας $\omega_{f}$, δηλαδή:
+$$
+\omega(t) = \begin{bmatrix}
+    0.8  \bar\omega \sin(\omega_{f}  t) \\
+    0.6  \bar\omega \sin(\omega_{f}  t) 
+\end{bmatrix}.
+$$
+Παρόλο που το παραπάνω αποτελεί έναν απλό τρόπο μοντελοποίησης του $\omega$, θα ισχύει $||\omega|| = \bar\omega, \forall t$.
+
+Για να αποφύγουμε περιπτώσεις σταθερού πλάτους επιλέγουμε για κάθε συνιστώσα να δώσουμε μία διαφορετική μικρή συχνότητα και μια διαφορά φάσης μεταξύ τους. 
+Έτσι, στο αρχείο \textit{src/computeBiasError.m} μοντελοποιήσαμε την παρακάτω συνάρτηση για το σφάλμα πόλωσης:
+\begin{equation}\label{t1b:omega}
+    \omega(t) = \begin{bmatrix}
+        0.7  \bar\omega \sin(\omega_{f1}  t) \\
+        0.6  \bar\omega \cos(\omega_{f2}  t + \pi/4) 
+    \end{bmatrix},
+\end{equation}
+κάνοντας κατάλληλο έλεγχο έτσι ώστε, αν έχουμε κάποιο πλάτος μεγαλύτερο του $\bar\omega$ να το κάνουμε scale. 
+
+Τα $\omega_{f1}, \omega_{f2}$ ορίζονται στο script \textit{mainTopic1b.m}, στην μεταβλητή {\small\texttt{omega\_freq}}, και είναι ίσα με $0.7$ και $1.2$ αντίστοιχα, για όλες τις περιπτώσεις $\bar\omega$.
+Στο αρχείο \textit{normOmega.m} υπολογίζουμε και κάνουμε plot την νόρμα του $\omega$ για να δούμε το πως αυτή κυμαίνεται και αν ικανοποιεί τους περιορισμούς. 
+
+\begin{examplebox}{Σημείωση}
+    Από το αρχείο \textit{normOmega.m} είναι φανερό ότι με τον τύπο που δώσαμε για την $\omega(t)$, 
+    το $\bar\omega$ αποτελεί το κατώτερο άνω φράγμα για την συνάρτηση της νόρμας $||\omega(t)||$\textemdash
+    ακομή και αν δεν κάνουμε έλεγχο για πλάτος μεγαλύτερο του $\bar\omega$ και scale. 
+    Επομένως, ο έλεγχος αυτός είναι καθαρά προαιρετικός για την επιλεγμένη μοντελοποίηση που παραθέσαμε. 
+\end{examplebox}
+
 \newpage
 
-\subsubsection{Προσομοίωση στο MATLAB}
-TODO: \\
-- Πως μοντελοποιώ το ω \\
-- Κάνε ένα σχόλιο για ευστάθεια \\
+
 \subsubsection{Αποτελέσματα MATLAB και Συμπεράσματα}
 TODO: \\
 - Βάλε πλοτς και πες συμπεράσματα
